# fastapi-discord

./: pyproject.toml
fastapi_discord/: __init__.py  client.py
