[tool.poetry]
name = "fastapi-discord"
version = "0.2.0"
description = "Discord OAuth FastAPI extension for APIs"
authors = ["Tert0"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6.2"
fastapi = ">=0.68.0"
aiohttp = ">=3.7.4"
aiocache = ">=0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
